JumpScript/tests/baselines/reference/project/nestedLocalModuleSimpleCase/amd/nestedLocalModuleSimpleCase.errors.txt
test1.jump(2,23): error TS1147: Import declarations in a namespace cannot reference a module.


==== test1.jump (1 errors) ====
    export module myModule {
     import foo = require("test2");
                          ~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
     //console.log(foo.$);
    }
    
    
    